--- a/Mzplayer.css
+++ b/Mzplayer.css
@@ -226,9 +226,11 @@ p1,p2{
 	opacity: 0.3;
 	
 }
-.full:hover .fullweb{
+.control .full:hover .fullweb{
 	display: block;
-
+}
+.mcontrol .full:hover .fullweb{
+	display: none;
 }
 .setting{
 	cursor:pointer;
